--- a/admin/app/pages/mi-galeria/gallery.html
+++ b/admin/app/pages/mi-galeria/gallery.html
@@ -54,102 +54,104 @@
           }
          }"
         >
-          <div class="masonry-brick col-md-3 m-20 mix {{image.category}}" ng-class="{'selected': image.selected}" ng-repeat="image in ga.images">
-            <div class="img-container" ng-if="image.tipo_archivo == 1">
-              <img class="img-responsive" ng-src="{{image.src_thumb}}" alt="">
-              <div class="img-details-hover" style="float: right;">
-                <div>
-                  <a href="" socialshare
-                  socialshare-provider="facebook"
-                  socialshare-type="feed"
-                  socialshare-via="145634995501895"
-                  socialshare-url="{{image.src_share}}"
-                  socialshare-text="Vacaciones en Punta Cana"
-                  socialshare-hashtags="Caribbean"
-                  socialshare-popup-height="300"
-                  socialshare-popup-width="400"
-                  socialshare-trigger="click"
-                    class="icon icon-share icon-primary icon-ef-2 icon-ef-2b hover-color">
-                    <i class="fa fa-facebook"></i>
-                  </a>
-                  <a href="" socialshare
-                    socialshare-provider="twitter"
-                    socialshare-type="sharer"
-                    socialshare-text="Vacaciones en Punta Cana"
-                    socialshare-via="caribbean.com"
-                    socialshare-hashtags="Caribbean"
+          <div infinite-scroll='ga.loadMore()' infinite-scroll-distance='2'>
+            <div class="masonry-brick col-md-3 m-20 mix {{image.category}}" ng-class="{'selected': image.selected}" ng-repeat="image in ga.images">
+              <div class="img-container" ng-if="image.tipo_archivo == 1">
+                <img class="img-responsive" ng-src="{{image.src_thumb}}" alt="">
+                <div class="img-details-hover" style="float: right;">
+                  <div>
+                    <a href="" socialshare
+                    socialshare-provider="facebook"
+                    socialshare-type="feed"
+                    socialshare-via="145634995501895"
                     socialshare-url="{{image.src_share}}"
+                    socialshare-text="Vacaciones en Punta Cana"
+                    socialshare-hashtags="Caribbean"
                     socialshare-popup-height="300"
                     socialshare-popup-width="400"
                     socialshare-trigger="click"
-                    class="icon icon-share icon-primary icon-ef-2 icon-ef-2b hover-color">
-                    <i class="fa fa-twitter"></i>
-                  </a>
+                      class="icon icon-share icon-primary icon-ef-2 icon-ef-2b hover-color">
+                      <i class="fa fa-facebook"></i>
+                    </a>
+                    <a href="" socialshare
+                      socialshare-provider="twitter"
+                      socialshare-type="sharer"
+                      socialshare-text="Vacaciones en Punta Cana"
+                      socialshare-via="caribbean.com"
+                      socialshare-hashtags="Caribbean"
+                      socialshare-url="{{image.src_share}}"
+                      socialshare-popup-height="300"
+                      socialshare-popup-width="400"
+                      socialshare-trigger="click"
+                      class="icon icon-share icon-primary icon-ef-2 icon-ef-2b hover-color">
+                      <i class="fa fa-twitter"></i>
+                    </a>
+                  </div>
                 </div>
-              </div>
-              <div class="img-details-static" style="float: left; position: relative; top: 5px;">
-                <!-- <h4>{{image.title}}</h4> -->
-                <div class="img-controls">
-                  <a href="javascript:;" class="img-select" ng-click="ga.selectImage($index)">
-                    <i class="fa fa-square-o" ng-show="!image.selected"></i>
-                    <i class="fa fa-check-square-o" ng-show="image.selected"></i>
-                  </a>
+                <div class="img-details-static" style="float: left; position: relative; top: 5px;">
+                  <!-- <h4>{{image.title}}</h4> -->
+                  <div class="img-controls">
+                    <a href="javascript:;" class="img-select" ng-click="ga.selectImage($index)">
+                      <i class="fa fa-square-o" ng-show="!image.selected"></i>
+                      <i class="fa fa-check-square-o" ng-show="image.selected"></i>
+                    </a>
 
-                  <a class="img-preview" href="{{image.src}}" title="{{image.title}}">
-                    <i class="fa fa-search"></i>
-                  </a>
-                  <!-- <a class="img-select" ng-if="image.descargado == 1 && !image.es_salida" href="javascript:;" ng-click="ga.btnPedidos(image)" uib-tooltip="Merchandising" tooltip-placement="top">
-                    <i class="fa fa-gift"></i>
-                  </a> -->
+                    <a class="img-preview" href="{{image.src}}" title="{{image.title}}">
+                      <i class="fa fa-search"></i>
+                    </a>
+                    <!-- <a class="img-select" ng-if="image.descargado == 1 && !image.es_salida" href="javascript:;" ng-click="ga.btnPedidos(image)" uib-tooltip="Merchandising" tooltip-placement="top">
+                      <i class="fa fa-gift"></i>
+                    </a> -->
+                  </div>
+                </div>
+
+              </div>
+              <div class="img-container" ng-if="image.tipo_archivo == 2">
+                <video style="width: 100%; height: auto;" controls>
+                  <source src="{{image.src_thumb}}" type="video/mp4">
+                  Your browser does not support the video tag.
+                </video>
+                <div class="img-details-hover" style="float: right;">
+                  <div>
+                    <a href="" socialshare
+                    socialshare-provider="facebook"
+                    socialshare-type="url"
+                    socialshare-via="145634995501895"
+                    socialshare-url="{{image.src_share}}"
+                    socialshare-text="Vacaciones en Punta Cana"
+                    socialshare-hashtags="Caribbean"
+                    socialshare-popup-height="300"
+                    socialshare-popup-width="400"
+                    socialshare-trigger="click"
+                      class="icon icon-share icon-primary icon-ef-2 icon-ef-2b hover-color">
+                      <i class="fa fa-facebook"></i>
+                    </a>
+                    <a href="" socialshare
+                      socialshare-provider="twitter"
+                      socialshare-type="sharer"
+                      socialshare-text="Vacaciones en Punta Cana"
+                      socialshare-via="caribbean.com"
+                      socialshare-hashtags="Caribbean"
+                      socialshare-url="{{image.src_share}}"
+                      socialshare-popup-height="300"
+                      socialshare-popup-width="400"
+                      socialshare-trigger="click"
+                      class="icon icon-share icon-primary icon-ef-2 icon-ef-2b hover-color">
+                      <i class="fa fa-twitter"></i>
+                    </a>
+                  </div>
+                </div>
+                <div class="img-details-static" style="float: left; position: relative; top: 5px;">
+                  <div class="img-controls">
+                    <a href="javascript:;" class="img-select" ng-click="ga.selectImage($index)">
+                      <i class="fa fa-square-o" ng-show="!image.selected"></i>
+                      <i class="fa fa-check-square-o" ng-show="image.selected"></i>
+                    </a>
+                  </div>
                 </div>
               </div>
 
             </div>
-            <div class="img-container" ng-if="image.tipo_archivo == 2">
-              <video style="width: 100%; height: auto;" controls>
-                <source src="{{image.src_thumb}}" type="video/mp4">
-                Your browser does not support the video tag.
-              </video>
-              <div class="img-details-hover" style="float: right;">
-                <div>
-                  <a href="" socialshare
-                  socialshare-provider="facebook"
-                  socialshare-type="url"
-                  socialshare-via="145634995501895"
-                  socialshare-url="{{image.src_share}}"
-                  socialshare-text="Vacaciones en Punta Cana"
-                  socialshare-hashtags="Caribbean"
-                  socialshare-popup-height="300"
-                  socialshare-popup-width="400"
-                  socialshare-trigger="click"
-                    class="icon icon-share icon-primary icon-ef-2 icon-ef-2b hover-color">
-                    <i class="fa fa-facebook"></i>
-                  </a>
-                  <a href="" socialshare
-                    socialshare-provider="twitter"
-                    socialshare-type="sharer"
-                    socialshare-text="Vacaciones en Punta Cana"
-                    socialshare-via="caribbean.com"
-                    socialshare-hashtags="Caribbean"
-                    socialshare-url="{{image.src_share}}"
-                    socialshare-popup-height="300"
-                    socialshare-popup-width="400"
-                    socialshare-trigger="click"
-                    class="icon icon-share icon-primary icon-ef-2 icon-ef-2b hover-color">
-                    <i class="fa fa-twitter"></i>
-                  </a>
-                </div>
-              </div>
-              <div class="img-details-static" style="float: left; position: relative; top: 5px;">
-                <div class="img-controls">
-                  <a href="javascript:;" class="img-select" ng-click="ga.selectImage($index)">
-                    <i class="fa fa-square-o" ng-show="!image.selected"></i>
-                    <i class="fa fa-check-square-o" ng-show="image.selected"></i>
-                  </a>
-                </div>
-              </div>
-            </div>
-
           </div>
         </div>
       </div>
